--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head lang="es">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>.: Los Unicos :.</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:800italic,400' rel='stylesheet' type='text/css'>
@@ -144,7 +144,7 @@
                             <div class="col-xs-12 col-sm-9 col-md-6 col-lg-6">
                                 <h3>Github</h3>
                                 <p>GitHub es una forja para alojar proyectos utilizando el sistema de control de versiones Git.
-                                
+                                <a href="#">Leer mas</a> 
                                 </p>
                             </div>
                         </div>
@@ -180,7 +180,6 @@
         <script src="js/vendor/bootstrap.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
         <!--<script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
