imgs for slider

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="img/img1.jpg" class="adaptar" alt="">
+                        <img src="img/img_1.jpg" class="adaptar" alt="">
                     </div>
                     <div class="item">
-                        <img src="img/img2.jpg" class="adaptar" alt="">
+                        <img src="img/img_2.jpg" class="adaptar" alt="">
                     </div>
                     <div class="item">
-                        <img src="img/img3.jpg" class="adaptar" alt="">
+                        <img src="img/img_3.jpg" class="adaptar" alt="">
                     </div>
                 </div>
                 <a href="#miSlide" class="left carousel-control" data-slide="prev">
